# rusty-city-simulator

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  Trunk.toml  index.html  save.json  vercel.json
.github/workflows/: ci.yml  codeql.yml  deploy.yml  release.yml
saves/: city_20260313_074421.json  city_20260313_074422.json  city_20260313_081615.json  city_20260313_081617.json  city_20260313_082238.json  city_20260313_082314.json  city_20260313_085327.json  city_20260313_092243.json  city_20260313_100001.json  city_20260313_100903.json  city_20260313_101419.json  city_20260313_101435.json  city_20260313_101438.json  city_20260313_110452.json  city_20260313_110457.json  city_20260313_111335.json  city_20260313_111340.json  city_20260313_113024.json  city_20260313_113454.json  city_20260313_113509.json  city_20260313_113708.json  city_20260313_113829.json  city_20260313_113852.json
src/: aging.rs  ai.rs  city_name.rs  economy.rs  entities.rs  events.rs  grid.rs  happiness.rs  history.rs  housing.rs  hovered.rs  main.rs  milestones.rs  movement.rs  news.rs  policies.rs  reproduction.rs  roads.rs  save.rs  sports.rs  sprites.rs  start_screen.rs  time.rs  transit.rs  ui.rs  version.rs  world.rs
