[package]
name = "city_sim"
version = "0.8.2"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.10"
uuid = { version = "1.22", features = ["v4", "serde"] }
pathfinding = "4.15"

[profile.dev]
opt-level = 1
