[package]
name = "city_sim"
version = "0.12.5"
edition = "2021"

[features]
default = ["dynamic_linking", "debug_ui"]
dynamic_linking = ["bevy/dynamic_linking"]
debug_ui = []

[dependencies]
bevy = { version = "0.18" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.10"
uuid = { version = "1.22", features = ["v4", "serde"] }
pathfinding = "4.15"

[profile.dev]
opt-level = 1

[profile.release]
strip = "symbols"
